<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Place Its</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_test">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Current Tasks</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Updates</string>
    <string name="action_location_found">Location Found!</string>
    <string name="action_add_note">Add note</string>
    <string name="cancel">Cancel</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="title_activity_day_chooser">DayChooser</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_settings_layout">MainActivity</string>
    <string name="oneMin">One Minute</string>
    <string name="weekly">Weekly</string>
    <string name="action_about">About</string>
    <string name="okay">Okay</string>
    <string name="about_text">Team 10 Project Developers: \n \n Andrew Du \n Joseph Anz \n Hardy Lou \n Daniel Mariano \n Chen Liao \n Navid Afsarifard \n</string>
    <string name="about_us">About Us</string>
    <string name="active_list">Current Tasks</string>
    <string name="continuous_track">Continuous Tracking</string>
    <string name="placeits">Place Its</string>
    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Need an account?</string>
    <string name="createAccountTitle">Create an Account</string>
    <string name="yourName">Your username?</string>
    <string name="yourPassword">Your password?</string>
    <string name="createAccount">Create Account</string>
    <string name="accountPreferences">Account Preferences</string>
    <string name="signout">Sign Out</string>
    <string name="delete_account_summary">Permanently delete this account? You cannot undo this action.</string>
    <string name="delete_account_title">Delete Account</string>
    
    
    <string-array name="places">
        <item > none</item>
		<item > accounting</item>
		<item > airport</item>
		<item > amusement_park</item>
		<item > aquarium</item>
		<item > art_gallery</item>
		<item > atm</item>
		<item > bakery</item>
		<item > bank</item>
		<item > bar</item>
		<item > beauty_salon</item>
		<item > bicycle_store</item>
		<item > book_store</item>
		<item > bowling_alley</item>
		<item > bus_station</item>
		<item > cafe</item>
		<item > campground</item>
		<item > car_dealer</item>
		<item > car_rental</item>
		<item > car_repair</item>
		<item > car_wash</item>
		<item > casino</item>
		<item > cemetery</item>
		<item > church</item>
		<item > city_hall</item>
		<item > clothing_store</item>
		<item > convenience_store</item>
		<item > courthouse</item>
		<item > dentist</item>
		<item > department_store</item>
		<item > doctor</item>
		<item > electrician</item>
		<item > electronics_store</item>
		<item > embassy</item>
		<item > establishment</item>
		<item > finance</item>
		<item > fire_station</item>
		<item > florist</item>
		<item > food</item>
		<item > funeral_home</item>
		<item > furniture_store</item>
		<item > gas_station</item>
		<item > general_contractor</item>
		<item > grocery_or_supermarket</item>
		<item > gym</item>
		<item > hair_care</item>
		<item > hardware_store</item>
		<item > health</item>
		<item > hindu_temple</item>
		<item > home_goods_store</item>
		<item > hospital</item>
		<item > insurance_agency</item>
		<item > jewelry_store</item>
		<item > laundry</item>
		<item > lawyer</item>
		<item > library</item>
		<item > liquor_store</item>
		<item > local_government_office</item>
		<item > locksmith</item>
		<item > lodging</item>
		<item > meal_delivery</item>
		<item > meal_takeaway</item>
		<item > mosque</item>
		<item > movie_rental</item>
		<item > movie_theater</item>
		<item > moving_company</item>
		<item > museum</item>
		<item > night_club</item>
		<item > painter</item>
		<item > park</item>
		<item > parking</item>
		<item > pet_store</item>
		<item > pharmacy</item>
		<item > physiotherapist</item>
		<item > place_of_worship</item>
		<item > plumber</item>
		<item > police</item>
		<item > post_office</item>
		<item > real_estate_agency</item>
		<item > restaurant</item>
		<item > roofing_contractor</item>
		<item > rv_park</item>
		<item > school</item>
		<item > shoe_store</item>
		<item > shopping_mall</item>
		<item > spa</item>
		<item > stadium</item>
		<item > storage</item>
		<item > store</item>
		<item > subway_station</item>
		<item > synagogue</item>
		<item > taxi_stand</item>
		<item > train_station</item>
		<item > travel_agency</item>
		<item > university</item>
		<item > veterinary_care</item>
		<item > zoo</item>
    </string-array>    
    
   </resources>