<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Add a note -->
    <item android:id="@+id/action_add_note"
          android:icon="@drawable/ic_action_new_event"
          android:title="@string/action_add_note"
          android:showAsAction="ifRoom"/>

     
    <!-- Search -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom"/>
        
     <!-- About Us -->
    <item android:id="@+id/action_about"
          android:icon="@drawable/ic_action_about"
          android:title="@string/action_about"
          android:showAsAction="ifRoom" />
    
    
    <!-- TestMode/ Continuous Tracking -->
    <item android:id="@+id/continuous_track"
          android:icon="@drawable/ic_action_location_found"
          android:title="@string/continuous_track"
          android:showAsAction="ifRoom" />

     

</menu>