<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_style" >
    

     <TextView
         android:id="@+id/signUpTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="45dp"
         android:text="@string/createAccountTitle"
         android:textColor="@android:color/white"
         android:textSize="30sp"
         />
     
     <EditText
        android:id="@+id/yourUsername"
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpTextView"
	    android:layout_marginBottom="1dp"
        android:layout_marginTop="5dp" 
		android:layout_centerHorizontal="true"
        android:background="@android:drawable/editbox_background"
        android:inputType="text"
        android:maxLines="1" 
        android:textSize="12sp"
        android:hint="@string/yourName">
    </EditText>
    
     <EditText
        android:id="@+id/yourPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/yourUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@android:drawable/editbox_background"
        android:maxLines="1" 
		android:textSize="12sp"
        android:inputType="textPassword"
        android:hint="@string/yourPassword"
		>
    </EditText>

	<Button
	    android:id="@+id/btn_create_account"
	    android:layout_width="250dp"
	    android:layout_height="30dp"
	    android:layout_below="@id/yourPassword"
	    android:layout_centerHorizontal="true"
	    android:background="@drawable/buttonbackground"
	    android:text="@string/createAccount"
	    android:textColor="@android:color/white"
	    android:textSize="15sp" />
</RelativeLayout>
