<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_style">
    
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="45dp"
         android:text="@string/placeits"
         android:textColor="@android:color/white"
         android:textSize="30sp"
         />
     
     <EditText
        android:id="@+id/username_edit"
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
	    android:layout_marginBottom="1dp"
        android:layout_marginTop="5dp" 
		android:layout_centerHorizontal="true"
        android:background="@android:drawable/editbox_background"
        android:inputType="text"
        android:maxLines="1" 
        android:minEms="4"
        android:textSize="12sp"
        android:hint="@string/username">
    </EditText>
    
     <EditText
        android:id="@+id/password_edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@android:drawable/editbox_background"
        android:maxLines="1" 
        android:minEms="4"
		android:textSize="12sp"
        android:inputType="textPassword"
        android:hint="@string/password"
		>
    </EditText>

	<Button
	    android:id="@+id/btn_login"
	    android:layout_width="250dp"
	    android:layout_height="30dp"
	    android:layout_below="@id/password_edit"
	    android:layout_centerHorizontal="true"
	    android:background="@drawable/buttonbackground"
	    android:text="@string/login"
	    android:textColor="@android:color/white"
	    android:textSize="15sp" />

</RelativeLayout>