<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp" >

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp" >

        <RadioButton
            android:id="@+id/one_min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/oneMin" />

        <RadioButton
            android:id="@+id/weekly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/weekly" />
    </RadioGroup>

    <View
        android:id="@+id/barHorz"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/radio_group"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:layout_marginTop="10dip"
        android:background="?android:attr/dividerVertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/barHorz"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/chooseDaysCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/cancel" />

        <View
            android:id="@+id/barVert"
            android:layout_width="1dip"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dip"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/chooseDaysConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/confirm" />
    </LinearLayout>

</RelativeLayout>